<resources >
    <string  name="accept">ACCEPT</string>
    <string  name="added">ADDED</string>
    <string  name="album">ALBUM</string>
    <string  name="app_name">squirrel</string>
    <string  name="audio_call">AUDIO CALL</string>
    <string  name="call_calling">IN CALLING</string>
    <string  name="call_canceled">CANCELED</string>
    <string  name="call_closed">CLOSED</string>
    <string  name="call_no_response">NO PEER\'S RESPONSE</string>
    <string  name="call_peer_canceled">PEER CANCELED CALL</string>
    <string  name="call_peer_closed">CLOSED</string>
    <string  name="call_peer_demand_a_audio_call_with_you">REQUESTING YOU A VOICE CALL</string>
    <string  name="call_peer_demand_a_video_call_with_you">REQUESTING YOU A VIDEO CALL</string>
    <string  name="call_peer_rejected">PEER REJECTED CALL</string>
    <string  name="call_rejected">REJECTED</string>
    <string  name="call_room_not_found">ROOM NOT FOUND</string>
    <string  name="call_state_error">STATE ERROR</string>
    <string  name="call_waiting_for_response">WAITING FOR PEER\'S RESPONSE</string>
    <string  name="change">CHANGE</string>
    <string  name="chat">CHAT</string>
    <string  name="chat_audio_message">VOICE MESSAGE</string>
    <string  name="chat_create_new_group">CREATE CHAT GROUP</string>
    <string  name="chat_group">CHAT GROUP</string>
    <string  name="chat_group_exist">CHAT GROUP EXIST</string>
    <string  name="chat_group_leave_or_delete">LEAVE OR DELETE</string>
    <string  name="chat_group_left_or_deleted">LEFT OR DELETED</string>
    <string  name="chat_image_message">IMAGE MESSAGE</string>
    <string  name="chat_press_to_talk">PRESS TO TALK</string>
    <string  name="chat_recorded_voice_duration_too_short">VOICE RECORD DURING TO SHORT</string>
    <string  name="chat_talking">RECORDING</string>
    <string  name="chat_video_message">VIDEO MESSAGE</string>
    <string  name="click_to_play">CLICK TO PLAY</string>
    <string  name="colon">:</string>
    <string  name="comma">,</string>
    <string  name="connecting">CONNECTING</string>
    <string  name="connectionless">NO CONNECT</string>
    <string  name="contact">CONTACT</string>
    <string  name="contact_add_to_new_group">ADD TO NEW GROUP</string>
    <string  name="contact_edit_note">REMARK/GROUPING IS EDITABLE</string>
    <string  name="contact_group_default_name">DEFAULTS</string>
    <string  name="contact_group_exist">GROUP EXIST</string>
    <string  name="contact_list">CONTACTS</string>
    <string  name="contact_offline">CONTACT OFFLINE</string>
    <string  name="contact_select_group">GROUPING</string>
    <string  name="delete">DELETE</string>
    <string  name="disconnected">DISCONNECTED</string>
    <string  name="discovery">DISCOVERY</string>
    <string  name="discovery_input_keyword">KEYWORD(ACCOUNT)</string>
    <string  name="discovery_searched_nothing">SEARCHED NOTHING</string>
    <string  name="exit">EXIT</string>
    <string  name="grouping">GROUPING</string>
    <string  name="invite">INVITE</string>
    <string  name="language">LANGUAGE</string>
    <string  name="language_select">LANGUAGE</string>
    <string  name="language_chinese">中文</string>
    <string  name="language_english">ENGLISH</string>
    <string  name="login">LOGIN</string>
    <string  name="login_failed">USERNAME OR PASSWORD ERROR</string>
    <string  name="login_form_error">USERNAME OR PASSWORD EMPTY</string>
    <string  name="login_remote_login_error">OFFSITE LANDING</string>
    <string  name="logout">LOGOUT</string>
    <string  name="member">MEMBER</string>
    <string  name="member_list">MEMBER</string>
    <string  name="message">MESSAGE</string>
    <string  name="message_whether_to_delete">DELETE CHAT HISTORY?</string>
    <string  name="moments">MOMENTS</string>
    <string  name="more">MORE</string>
    <string  name="name">NAME</string>
    <string  name="network_configuration_error">NETWORK ERROR</string>
    <string  name="nickname">NICKNAME</string>
    <string  name="not_implement">UNIMPLEMENT</string>
    <string  name="notice">NOTICE</string>
    <string  name="notification">NOTIFICATION</string>
    <string  name="notification_received_a_new_message">RECEIVED A NEW MESSAGE</string>
    <string  name="password">PASSWORD</string>
    <string  name="password_confirm">PASSWORD CONFIRM</string>
    <string  name="portrait_hidden">DROPDOWN TO VIEW PORTRAIT</string>
    <string  name="profile">PROFILE</string>
    <string  name="program_running">PROGRAM IS RUNNING</string>
    <string  name="recall">RECALL</string>
    <string  name="register">REGISTER</string>
    <string  name="register_form_error">NOTICE: ANY INPUT EMPTY OR TWO INPUT PASSWORDS NOT CONSISTENT</string>
    <string  name="register_register_if_no_account">NO ACCOUNT? REGISTER A NEW ONE</string>
    <string  name="register_registered">REGISTERD SUCCESSFULLY, RETURNING</string>
    <string  name="register_username_registered">USERNAME HAS BEEN REGISTERED</string>
    <string  name="remark">REMARK</string>
    <string  name="resend">RESEND</string>
    <string  name="retry">RETRY</string>
    <string  name="scan">SCAN</string>
    <string  name="second">SECOND</string>
    <string  name="select">SELECT</string>
    <string  name="send">SEND</string>
    <string  name="settings">SETTINGS</string>
    <string  name="squirrel">SQUIRREL</string>
    <string  name="start_to_chat">START TO CHAT</string>
    <string  name="subscribe_add_contact">ADD AS CONTACT</string>
    <string  name="subscribe_contact_added">CONTACT ADDED, START TO CHAT</string>
    <string  name="subscribe_form_error">REMARK OR GROUP IS EMPTY</string>
    <string  name="subscribe_received_a_adding_contact_request">REQUESTING TO ADD YOU AS CONTACT</string>
    <string  name="subscribe_request_sent">SUBSCRIBE REQUEST HAS BEEN SENT</string>
    <string  name="subscribe_accept_request">ACCEPT REQUEST</string>
    <string  name="system_settings">SYSTEM SETTINGS</string>
    <string  name="unknown_error">UNKNOWN ERROR</string>
    <string  name="updated">UPDATED</string>
    <string  name="username">USERNAME</string>
    <string  name="video_call">VIDEO CALL</string>
    <string  name="waiting">WAITING</string>
    <string  name="warning">WARNING</string>
    <string-array  name="group_chat_details_list">
        <item>MEMBER</item><item>INVITE</item>
    </string-array>
    <string-array  name="buddy_settings_menu_titles">
        <item>PERSONAL CENTER</item><item>ALBUM</item><item>COLLECTIONS</item><item>FILES</item>
    </string-array>
</resources>
