<?xml  version="1.0"  encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"  xmlns:app="http://schemas.android.com/apk/res-auto"  android:layout_width="match_parent"  android:layout_height="match_parent"  android:orientation="vertical"  android:background="@color/lightgray"        android:fitsSystemWindows="true">

    <cc.mashroom.hedgehog.widget.HeaderBar  android:id="@+id/header_bar"  android:layout_width="match_parent"  android:layout_height="50dp"  android:title="@string/edit"  android:background="@color/steelblue"  app:immersive="true"  app:backDrawable="@drawable/lt_all"></cc.mashroom.hedgehog.widget.HeaderBar>

    <TextView  android:layout_width="match_parent"  android:layout_height="30dp"  android:layout_marginTop="1px"  android:textColor="@color/darkgray"  android:textSize="14dp"  android:text="@string/contact_edit_note"  android:gravity="center"/>

    <cc.mashroom.hedgehog.widget.StyleableEditView  android:id="@+id/username"  android:layout_width="match_parent"  android:layout_height="50dp"  android:background="@color/white"  android:textAlignment="viewEnd"  android:title="@string/username"  android:textColor="@color/darkgray"  app:mode="EXTERNAL"  app:showRightArrow="true"  app:rightArrowDirection="left"></cc.mashroom.hedgehog.widget.StyleableEditView>

    <cc.mashroom.hedgehog.widget.StyleableEditView  android:id="@+id/nickname"  android:layout_width="match_parent"  android:layout_height="50dp"  android:layout_marginTop="1px"  android:background="@color/white"  android:textAlignment="viewEnd"  android:title="@string/nickname"  android:textColor="@color/darkgray"  app:mode="EXTERNAL"  app:showRightArrow="true"  app:rightArrowDirection="left"></cc.mashroom.hedgehog.widget.StyleableEditView>

    <cc.mashroom.hedgehog.widget.StyleableEditView  android:id="@+id/remark"    android:layout_width="match_parent"  android:layout_height="50dp"  android:layout_marginTop="1px"  android:background="@color/white"  android:textAlignment="viewEnd"  android:title="@string/remark"    android:textColor="@color/darkgray"  app:mode="EXTERNAL"  app:showRightArrow="true"></cc.mashroom.hedgehog.widget.StyleableEditView>

    <cc.mashroom.hedgehog.widget.StyleableEditView  android:id="@+id/grouping"  android:layout_width="match_parent"  android:layout_height="50dp"  android:layout_marginTop="1px"  android:background="@color/white"  android:textAlignment="viewEnd"  android:title="@string/grouping"  android:textColor="@color/darkgray"  app:mode="EXTERNAL"  app:showRightArrow="true"></cc.mashroom.hedgehog.widget.StyleableEditView>

    <View  android:layout_width="match_parent"  android:layout_height="0dp" android:layout_weight="1"></View>

    <View  android:layout_width="match_parent"  android:layout_height="1px" android:background="@color/gainsboro"></View>

    <Button  android:id="@+id/chat_or_subscribe_button"  style="?android:attr/borderlessButtonStyle"  android:layout_width="match_parent"  android:layout_height="50dp"  android:background="@color/limegreen"  android:textColor="@color/white"  android:textSize="18dp"  android:text="@string/subscribe_add_contact"/>

</LinearLayout>