<?xml  version="1.0"  encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"  xmlns:app="http://schemas.android.com/apk/res-auto"  android:orientation="vertical"  android:layout_width="match_parent"  android:layout_height="match_parent"    android:background="@color/white">

    <cc.mashroom.hedgehog.widget.HeaderBar  android:id="@+id/header_bar"  android:layout_width="match_parent"  android:layout_height="50dp"  android:background="@color/steelblue"  android:title="@string/settings"  app:backText="@string/goback"  app:immersive="true"></cc.mashroom.hedgehog.widget.HeaderBar>

    <cc.mashroom.hedgehog.widget.StyleableEditView  android:id="@+id/language_selector"  android:layout_width="match_parent"  android:layout_height="50dp"  android:textColor="@color/black"  android:textSize="18dp"  android:title="@string/language"  android:editable="false"  android:textAlignment="viewEnd"  app:enableBottomBorder="true"/>

    <View  android:layout_width="match_parent"  android:layout_height="0dp" android:layout_weight="1"></View>

    <Button  android:id="@+id/logout_button"  style="?android:attr/borderlessButtonStyle"  android:layout_width="match_parent"  android:layout_height="50dp"  android:text="@string/logout"  android:textColor="@color/white"  android:textSize="18dp"  android:background="@color/red"/>

</LinearLayout>