<?xml  version="1.0"  encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"  xmlns:app="http://schemas.android.com/apk/res-auto"  android:layout_width="match_parent"  android:layout_height="match_parent"  android:orientation="vertical"  android:background="@color/lightgray"  android:fitsSystemWindows="true">

    <cc.mashroom.hedgehog.widget.HeaderBar  android:id="@+id/header_bar"  android:layout_width="match_parent"  android:layout_height="50dp"  android:background="@color/steelblue"  android:title="@string/register"  app:backText="@string/back"  app:immersive="true"></cc.mashroom.hedgehog.widget.HeaderBar>

    <androidx.coordinatorlayout.widget.CoordinatorLayout  android:layout_width="match_parent"  android:layout_height="0dp"  android:layout_weight="1">

        <com.google.android.material.appbar.AppBarLayout  android:id="@+id/collapsing_bar_layout"  android:layout_width="match_parent"  android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout  android:layout_width="match_parent"  android:layout_height="wrap_content"  android:background="@color/white"  app:layout_scrollFlags="scroll|exitUntilCollapsed"  app:contentScrim="@color/lightpink"  app:title="@string/portrait_hidden"  app:expandedTitleGravity="center"  app:expandedTitleTextAppearance="@style/ExpandedToolbarTitleAppreance"  app:collapsedTitleGravity="center"  app:collapsedTitleTextAppearance="@style/CollapsedToolbarTitleAppreance">

                <LinearLayout  android:id="@+id/protrait_layout"  android:layout_width="match_parent"  android:layout_height="150dp"  android:orientation="horizontal"  android:gravity="center"  android:background="@color/lightgray"  app:layout_collapseMode="parallax"  app:layout_collapseParallaxMultiplier="0.5">

                    <com.facebook.drawee.view.SimpleDraweeView  android:id="@+id/portrait_input"  android:layout_width="90dp"  android:layout_height="90dp"  android:layout_gravity="center"    app:roundWithOverlayColor="@color/lightgray"  app:roundAsCircle="true"  app:roundingBorderWidth="5dp"  app:roundingBorderColor="@color/white"/>

                </LinearLayout>

                <androidx.appcompat.widget.Toolbar  android:layout_width="match_parent"  android:layout_height="30dp"  android:padding="0dp"  android:background="@color/transparent"  app:contentInsetStart="0dp"></androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout >

        <androidx.core.widget.NestedScrollView  android:layout_width="match_parent"  android:layout_height="match_parent"  app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout  android:layout_width="match_parent"  android:layout_height="match_parent"  android:orientation="vertical">

                <cc.mashroom.hedgehog.widget.StyleableEditView  android:id="@+id/username_input"  android:layout_width="match_parent"  android:layout_height="50dp"  android:hint="@string/username"  app:enableBottomBorder="true"></cc.mashroom.hedgehog.widget.StyleableEditView>

                <cc.mashroom.hedgehog.widget.StyleableEditView  android:id="@+id/nickname_input"  android:layout_width="match_parent"  android:layout_height="50dp"  android:hint="@string/nickname"  app:enableBottomBorder="true"></cc.mashroom.hedgehog.widget.StyleableEditView>

                <cc.mashroom.hedgehog.widget.StyleableEditView  android:id="@+id/password_input"  android:layout_width="match_parent"  android:layout_height="50dp"  android:inputType="textPassword"  android:hint="@string/password"  app:enableBottomBorder="true"></cc.mashroom.hedgehog.widget.StyleableEditView>

                <cc.mashroom.hedgehog.widget.StyleableEditView  android:id="@+id/password_confirm_input"  android:layout_width="match_parent"  android:layout_height="50dp"  android:inputType="textPassword"  android:hint="@string/password_confirm"     app:enableBottomBorder="true"></cc.mashroom.hedgehog.widget.StyleableEditView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView >

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <Button  android:id="@+id/register_button"  style="?android:attr/borderlessButtonStyle"  android:layout_width="match_parent"  android:layout_height="50dp"  android:layout_alignParentBottom="true"  android:text="@string/register"     android:textSize="18dp"  android:textColor="@color/white"  android:background="@color/limegreen"/>

</LinearLayout>
